--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,8 +36,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
-set -g @dracula-fixed-location 'Dhaka'
-set -g @dracula-plugins 'weather'
+set -g @dracula-fixed-location 'Chittagong'
+set -g @dracula-plugins 'cpu-usage ram-usage battery weather'
+set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
 set -g status-position top
