--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,11 +5,13 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
+bind c new-window -c "#{pane_current_path}"
+
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf
