--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,7 +39,9 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location 'Chittagong'
-set -g @dracula-plugins 'cpu-usage ram-usage battery weather'
+set -g @dracula-plugins 'git cpu-usage ram-usage'
+set -g @dracula-cpu-usage-label "C"
+set -g @dracula-ram-usage-label "R"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-flags true
 set -g @dracula-show-left-icon session
