Update several nvim configs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,9 @@
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set -g prefix C-a
+set -g prefix C-space
 unbind C-b
-bind-key C-a send-prefix
+bind-key C-space send-prefix
 
 bind c new-window -c "#{pane_current_path}"
 
@@ -39,7 +39,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location 'Chittagong'
-set -g @dracula-plugins 'git cpu-usage ram-usage'
+set -g @dracula-plugins 'cpu-usage ram-usage git'
 set -g @dracula-cpu-usage-label "C"
 set -g @dracula-ram-usage-label "R"
 set -g @dracula-show-fahrenheit false
