Update nvim configs and add snippets

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,7 +39,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location 'Chittagong'
-set -g @dracula-plugins 'cpu-usage ram-usage git'
+set -g @dracula-plugins 'cpu-usage ram-usage'
 set -g @dracula-cpu-usage-label "C"
 set -g @dracula-ram-usage-label "R"
 set -g @dracula-show-fahrenheit false
