--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g prefix C-space
+set -sg escape-time 0
+
 unbind C-b
 bind-key C-space send-prefix
 
@@ -18,9 +20,11 @@ bind r source-file ~/.tmux.conf
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
-bind -r h resize-pane -R 5
-bind -r l resize-pane -L 5
+bind -r h resize-pane -L 5
+bind -r l resize-pane -R 5
 bind -r m resize-pane -Z 5
+
+set-option -g renumber-windows on
 
 set -g mouse on
 set-window-option -g mode-keys vi
