--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,6 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g prefix C-space
 set -sg escape-time 0
 
-unbind C-b
 bind-key C-space send-prefix
 
 bind c new-window -c "#{pane_current_path}"
@@ -23,6 +22,8 @@ bind -r k resize-pane -U 5
 bind -r h resize-pane -L 5
 bind -r l resize-pane -R 5
 bind -r m resize-pane -Z 5
+bind-key ! break-pane -d -n _hidden_pane
+bind-key @ join-pane -s $.0
 
 set-option -g renumber-windows on
 
