--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,9 @@ bind -r m resize-pane -Z 5
 bind-key ! break-pane -d -n _hidden_pane
 bind-key @ join-pane -s $.0
 
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+
 set-option -g renumber-windows on
 
 set -g mouse on
